 - t/utime.t: dragonflybsd has only microsecond precision
 - t/utime.t: dragonflybsd is noatime by default
 - t/stat.t: skip testing access times on HaikuOS, it doesn't support
   atime
 - darwin: make sure the compiler can find the system perl headers
   https://github.com/Perl/perl5/issues/20362
 - darwin: make sure PERL_DARWIN is defined on darwin.

1.9764 [2020-08-10]
 - Fix a bunch of repeated-word typos
 - Fix compilation with Visual C++ 2013 and older
 - Implement clock_gettime() and clock_getres() for win32
 - Remove workaround for an ancient Devel::PPPort bug
 - Remove the remains of MacOS classic support
 - Remove code for perls older than 5.6
 - Remove vestiges of mpeix support (removed in 5.17.x)
 - Remove trailing blanks
 - Add links to pod

1.9760 [2019-02-18]
 - make utime() available only if we have both fd and name setting
   [RT #133030]
 - Adjutst Makefile.PL for windows: the DEFINE() in Makefile.PL
   can't be in sub init() because that sub isn't called on windows
 - t/itimer.t: avoid race condition.
 - don't truncate nanosec utime
 - fallback/const-c.inc: Avoid compiler warning showing up on darwin.

1.9759 [2018-03-23]
 - This version reverts the changes on CPAN that were included in 1.9754 - 1.9758.
   Several of these changes caused instability on some windows platforms. We can
   revisit these fixes if necessary in Perl 5.29.0

1.9758 [2018-03-21]
 - fix build in Win32 with Visual C by introducing a fake struct timezone
   [rt.cpan.org #124844]
 - in utime.t detect better being run in a noatime filesystem,
   and if so, skip the test (for the HAMMER filesystem of DragonflyBSD)
 - also for the HAMMER fs (if not in noatime), lower the expected subsecond
   timestamp granularity to microseconds
 - fix the version number typo in Changes: 1.9577 -> 1.9757

1.9757 [2018-03-15]
 - fix win32 (and cygwin?) builds which have been broken since 1.9755:
   problem was that gettimeofday() is a macro and needs to stay such